# FractalViewer

./: CMakeLists.txt  README.md
docs/: C++ Implementation.md  FUTURE IDEA.md  Fractal viewer.md  Mandelbrot explorer.md  TODOs.md  The math behind.md  Versions.md
docs/.obsidian/: workspace.json
src/: Mandelbrot.cpp  Mandelbrot.h  VisualComputer.cpp  VisualComputer.h  main.cpp
src/models/: BurningShip.h  Fractal.h  Julia.h  Mandelbrot.h  Tricorn.h
